# azvm_manager

./: .gitignore  Cargo.toml  LICENSE
azure_compute/: Cargo.toml
azure_compute/src/: client.rs  models.rs
azvm_manager/: Cargo.toml
azvm_manager/src/: error.rs  main.rs  vm_client.rs
display/: Cargo.toml
dsp/: Cargo.toml
dsp/src/: lib.rs  rg.rs  sub.rs  vm.rs
store/: Cargo.toml
store/src/: lib.rs
