[package]
name = "azure_compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.16.0"
azure_identity = "0.16.2"
bytes = "1.5.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
serde = "1.0.189"
serde_json = "1.0.107"
time = { version = "0.3.30", features = ["serde"] }
