[package]
name = "azvm_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_compute = { path = "../azure_compute" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.9"
clap = { version = "4.4.6", features = ["derive"] }