[package]
name = "azvm_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsp = { path = "../dsp" }
store = { path = "../store" }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.9"
clap = { version = "4.4.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
azure_identity = "0.17.0"
azure_core = "0.17.0"
azure_mgmt_compute = "0.17.0"
azure_mgmt_resources = "0.17.0"
azure_mgmt_subscription = "0.17.0"
futures-util = "0.3.28"
futures = "0.3.28"
spinoff = { version = "0.8.0", features = ["dots", "arc", "line"] }
colored = "2.0.4"
